transform special characters

--- a/README.html
+++ b/README.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 	<meta charset="utf-8" />
 </head>
@@ -15,7 +15,7 @@
 
 <p>If you are looking for a general introduction into <a href="https://encyclopedia.historiography-project.com/h/holocaust-the/index.html">The Holocaust</a>, read our <a href="https://encyclopedia.historiography-project.com/h/holocaust-the/index.html">entry about this over-arching topic</a>, which will guide you through this historical labyrinth. It is also available as an audio and a video presentation.</p>
 
-<p>If you are looking for information on a specific Holocaust-related topic, use <a href="https://encyclopedia.historiography-project.com/search/index.html">our site’s search function</a> to pull up entries that deal with this.</p>
+<p>If you are looking for information on a specific Holocaust-related topic, use <a href="https://encyclopedia.historiography-project.com/search/index.html">our site&rsquo;s search function</a> to pull up entries that deal with this.</p>
 
 <p>If you feel like browsing our entries, use the Letter Squares above to navigate to a list of all entries starting with a specific letter. Alternatively, click on the entry <a href="https://encyclopedia.historiography-project.com/list-of-pages/index.html">List of Pages</a>, which pulls up ALL entries, sorted alphabetically. A more concise page just listing the headlines of each entry can be found in our <a href="https://encyclopedia.historiography-project.com/list-of-entries/index.html">List of Entries</a>.</p>
 
@@ -25,7 +25,7 @@
 
 <p>If you want to purchase our Encyclopedia, go to our <a href="https://holocaustencyclopedia.com/product/holocaust-encyclopedia/">store</a>, where you can choose between a hardcover edition, a paperback edition, a text-only eBook version for downloading (PDF or ePub), and a downloadable eBook with text and audio files for all entries (ePub).</p>
 
-<p>If you want to help us expand our Encyclopedia to cover additional topic, don’t hesitate to get in touch using our <a href="https://holocaustencyclopedia.com/contact-us/">Contact Us</a> form. If you are looking for inspirations as to what could possibly be done to help us, please read our short essay on our <a href="https://holocaustencyclopedia.com/support-us/">Support Us</a> page, then consider whether any of it is within your means and abilities.</p>
+<p>If you want to help us expand our Encyclopedia to cover additional topic, don&rsquo;t hesitate to get in touch using our <a href="https://holocaustencyclopedia.com/contact-us/">Contact Us</a> form. If you are looking for inspirations as to what could possibly be done to help us, please read our short essay on our <a href="https://holocaustencyclopedia.com/support-us/">Support Us</a> page, then consider whether any of it is within your means and abilities.</p>
 
 <p>Our <a href="https://encyclopedia.historiography-project.com/change-log/index.html">Change Log</a> tracks the changes we have made since the first print edition of our Encyclopedia was released in December 2023.</p>
 
@@ -37,7 +37,7 @@
 
 <hr />
 
-<p>Copyright © 2022&#8211;2024 Academic Research Group</p>
+<p>Copyright &copy; 2022&#8211;2024 Academic Research Group</p>
 
 </body>
 </html>
