--- a/a/auschwitz/index.html
+++ b/a/auschwitz/index.html
@@ -167,7 +167,7 @@
 					</tr>
 					<tr>
 						<td>1,000,000</td>
-						<td><a href="/bibliography/index.html#Pressac1989">J.‑C. Pressac</a> (1989), <i>Dictionnaire des noms propres</i> (1992)</td>
+						<td><a href="/bibliography/index.html#Pressac1989">J.-C. Pressac</a> (1989), <i>Dictionnaire des noms propres</i> (1992)</td>
 					</tr>
 					<tr>
 						<td>800&ndash;900,000</td>
