--- a/c/carbon-monoxide/index.html
+++ b/c/carbon-monoxide/index.html
@@ -145,13 +145,13 @@
 					<tr>
 						<td> process gas </td>
 						<td> In large quantities available only near coal-liquefaction plants, such as at Auschwitz-<a href="/m/monowitz/index.html">Monowitz</a>; requires gas-pipe hook-up. </td>
-						<td> 30-100% </td>
+						<td> 30&ndash;100% </td>
 						<td> extremely to very high </td>
 					</tr>
 					<tr>
 						<td> city gas </td>
 						<td> Readily available in larger cities with coke processing; cheap, abundant, and with access to a large-scale infrastructure for adding and maintaining pipe networks. </td>
-						<td> ±30% </td>
+						<td> &plusmn;30% </td>
 						<td> very high </td>
 					</tr>
 					<tr>
