--- a/c/commissars-order/index.html
+++ b/c/commissars-order/index.html
@@ -29,7 +29,7 @@
 			</p>
 			<blockquote>
 				<p lang="fr-FR">
-					<i>Au cas où, en temps de guerre, un des bellig&eacute;rants ne serait pas partie &agrave; la Convention, ses dispositions demeureront n&eacute;anmoins obligatoires entre les bellig&eacute;rants qui y participent.</i>
+					<i>Au cas o&ugrave;, en temps de guerre, un des bellig&eacute;rants ne serait pas partie &agrave; la Convention, ses dispositions demeureront n&eacute;anmoins obligatoires entre les bellig&eacute;rants qui y participent.</i>
 				</p>
 			</blockquote>
 			<p>
