--- a/change-log/index.html
+++ b/change-log/index.html
@@ -318,7 +318,7 @@
 							<td>Hydrogen cyanide (HCN) is the active toxic component of the pesticide Zyklon B It has no effect on microbial lifeforms at prescribed levels. It is lethal above certain concentrations to multi-cellular lifeforms, such as insects and mammals.</td>
 							<td>
 							<p>
-								Hydrogen cyanide (HCN) is the active toxic component of the pesticide Zyklon B, which has been around since the 1920s (see the entry Zyklon B for details on this product). At room temperature, HCN is a colorless liquid, but it boils already at 25.7°C (78.3°F). It dissolves easily in water and reacts readily with iron salts.
+								Hydrogen cyanide (HCN) is the active toxic component of the pesticide Zyklon B, which has been around since the 1920s (see the entry Zyklon B for details on this product). At room temperature, HCN is a colorless liquid, but it boils already at 25.7&deg;C (78.3&deg;F). It dissolves easily in water and reacts readily with iron salts.
 							</p>
 							<p>
 								HCN has no effect on microbial lifeforms at levels prescribed for disinfestations, hence cannot be used for disinfections. However, it is lethal above certain concentrations to multi-cellular lifeforms, such as insects and mammals.</td>
