--- a/e/einsatzgruppen/index.html
+++ b/e/einsatzgruppen/index.html
@@ -1448,7 +1448,7 @@
 						<td> Solomon M. Schwarz (1951, p. 220) </td>
 					</tr>
 					<tr>
-						<td> ≤ 2,624,500 </td>
+						<td> &le; 2,624,500 </td>
 						<td> Yitzhak Arad (2009, pp. 524f.) </td>
 					</tr>
 					<tr>
@@ -1521,13 +1521,13 @@
 						<td>Kramatorsk</td>
 						<td> none </td>
 						<td> 812 </td>
-						<td> ∞ </td>
+						<td> &infin; </td>
 					</tr>
 					<tr>
 						<td>Kremenchuk</td>
 						<td> none </td>
 						<td> 60,000 </td>
-						<td> ∞ </td>
+						<td> &infin; </td>
 					</tr>
 					<tr>
 						<td><a href="/l/lviv/index.html">Lviv</a></td>
@@ -1563,13 +1563,13 @@
 						<td>Romny</td>
 						<td> none </td>
 						<td> 3,000 </td>
-						<td> ∞ </td>
+						<td> &infin; </td>
 					</tr>
 					<tr>
 						<td>Rostov</td>
 						<td> none </td>
 						<td> 15,000 to 18,000 </td>
-						<td> ∞ </td>
+						<td> &infin; </td>
 					</tr>
 					<tr>
 						<td>Rovno</td>
@@ -1587,13 +1587,13 @@
 						<td>Sumy</td>
 						<td> none </td>
 						<td> 5,000 </td>
-						<td> ∞ </td>
+						<td> &infin; </td>
 					</tr>
 					<tr>
 						<td>Vasilkov</td>
 						<td> none </td>
 						<td> 1,000 </td>
-						<td> ∞ </td>
+						<td> &infin; </td>
 					</tr>
 					<tr>
 						<td>Vinnitsa</td>
@@ -1605,7 +1605,7 @@
 						<td>Voroshilov</td>
 						<td> none </td>
 						<td> 1,901 </td>
-						<td> ∞ </td>
+						<td> &infin; </td>
 					</tr>
 					<tr>
 						<td>Zagare</td>
@@ -1617,7 +1617,7 @@
 						<td>Zaporozhie</td>
 						<td> none </td>
 						<td> 43,000 </td>
-						<td> ∞ </td>
+						<td> &infin; </td>
 					</tr>
 				</tbody>
 			</table>
