--- a/h/holocaust-the/index.html
+++ b/h/holocaust-the/index.html
@@ -177,7 +177,7 @@
 				a. <a id="Propaganda" href="/p/propaganda/index.html">Propaganda</a>
 			</h4>
 			<p>
-				Truth is always the first victim of any war, and the victors never write an unbiased history of any war. The same is true for World War Two, of which the Holocaust is an integral part. There was never a war where propaganda and psychological warfare have played such important roles. To believe that propaganda had no effect on our concept of <q>the Holocaust</q> is naïve at best.
+				Truth is always the first victim of any war, and the victors never write an unbiased history of any war. The same is true for World War Two, of which the Holocaust is an integral part. There was never a war where propaganda and psychological warfare have played such important roles. To believe that propaganda had no effect on our concept of <q>the Holocaust</q> is na&iuml;ve at best.
 			</p>
 			<p>
 				For this reason, the propaganda activities of all major nations involved in the writing of Holocaust history are dealt with in sections of the entry on <a href="/p/propaganda/index.html">Propaganda</a>:
