--- a/h/hydrogen-cyanide/index.html
+++ b/h/hydrogen-cyanide/index.html
@@ -22,7 +22,7 @@
 			<audio controls src="/_assets/HydrogenCyanide.mp3">
 			</audio>
 			<p>
-				Hydrogen cyanide (HCN) is the active toxic ingredient in the pesticide Zyklon B, which has been around since the 1920s (see the entry <a href="/z/zyklon-b/index.html">Zyklon B</a> for details on this product). At room temperature, HCN is a colorless liquid, but it boils already at 25.7°C (78.3°F). It dissolves easily in water and reacts readily with iron salts.
+				Hydrogen cyanide (HCN) is the active toxic ingredient in the pesticide Zyklon B, which has been around since the 1920s (see the entry <a href="/z/zyklon-b/index.html">Zyklon B</a> for details on this product). At room temperature, HCN is a colorless liquid, but it boils already at 25.7&deg;C (78.3&deg;F). It dissolves easily in water and reacts readily with iron salts.
 			</p>
 			<p>
 				HCN has no effect on microbial lifeforms at levels prescribed for disinfestations, hence cannot be used for disinfections. However, it is lethal above certain concentrations to multi-cellular lifeforms, such as insects and mammals. This chemical blocks a cell&rsquo;s ability to use oxygen for its metabolism, and hence suffocates it on a cellular level. As a result, the blood stays rich in oxygen, becoming over-saturated with it as the poisoning progresses. The visible hallmarks of cyanide poisoning are therefore a distinct pink complexion, and pinkish-red rather than purple-bluish death marks (<i>livor mortis</i>).
