--- a/i/i-g-farbenindustrie-ag/index.html
+++ b/i/i-g-farbenindustrie-ag/index.html
@@ -28,7 +28,7 @@
 				I.G. Farben was moreover a major shareholder of the <a href="/d/degesch/index.html">DEGESCH</a> pest-control company, which held the patent for <a href="/z/zyklon-b/index.html">Zyklon B</a>, and developed and patented a standard <a href="/f/fumigation-gas-chamber/index.html">fumigation gas chamber</a> that was mass-produced during the war years.
 			</p>
 			<p>
-				Due to this entanglement with the slave-labor camp system and the German war effort, 23 of the top representatives of I.G. Farben were prosecuted by the U.S. occupational forces, who organized an entire trial at Nuremberg against them, the so-called <q>I.G. Farben Case</q> (<a href="/bibliography/index.html#NMT"><i>NMT</i></a>, Vols. 7f.). Ten of the defendants were acquitted, and 13 received prison sentences between 1½ and eight years (NMT, Vol. 8, pp. 1206-1209).
+				Due to this entanglement with the slave-labor camp system and the German war effort, 23 of the top representatives of I.G. Farben were prosecuted by the U.S. occupational forces, who organized an entire trial at Nuremberg against them, the so-called <q>I.G. Farben Case</q> (<a href="/bibliography/index.html#NMT"><i>NMT</i></a>, Vols. 7f.). Ten of the defendants were acquitted, and 13 received prison sentences between 1&frac12; and eight years (NMT, Vol. 8, pp. 1206-1209).
 			</p>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
