--- a/m/marsalek-hans/index.html
+++ b/m/marsalek-hans/index.html
@@ -39,7 +39,7 @@
 				<li><a href="/h/himmler-heinrich/index.html">Himmler</a> allegedly ordered all inmates of the camps at Mauthausen and Gusen killed by herding them into a mining tunnel, then dynamiting the exit, thus burying them alive.</li>
 				<li>The Mauthausen Camp had a gassing facility camouflaged as a bathroom.</li>
 				<li>A gas van shuttled between the Mauthausen and Gusen Camps, gassing inmates along the way, and it was driven by Ziereis himself.</li>
-				<li>Between 1 and 1½ million people were killed at the euthanasia center at <a href="/h/hartheim/index.html">Hartheim</a> Castle near Linz.</li>
+				<li>Between 1 and 1&frac12; million people were killed at the euthanasia center at <a href="/h/hartheim/index.html">Hartheim</a> Castle near Linz.</li>
 			</ul>
 			<p>
 				A key feature of this <q>confession</q> is that Mar&scaron;&aacute;lek has Ziereis incriminate the entire roster of leading SS personalities: <a href="/h/himmler-heinrich/index.html">Heinrich Himmler</a>, <a href="/h/heydrich-reinhardt/index.html">Reinhardt Heydrich</a>, <a href="/k/kaltenbrunner-ernst/index.html">Ernst Kaltenbrunner</a>, Heinrich M&uuml;ller, <a href="/g/glucks-richard/index.html">Richard Gl&uuml;cks</a> and <a href="/p/pohl-oswald/index.html">Oswald Pohl</a>, among others. As such, the document was then used during the Nuremberg tribunals.
