--- a/n/nuremberg-military-tribunals/index.html
+++ b/n/nuremberg-military-tribunals/index.html
@@ -68,14 +68,14 @@
 						<td> Friedrich Flick <i>et al.</i> (Industrialists, slave labor) </td>
 						<td> 8/2/1947 &mdash; 22/12/1947 </td>
 						<td> VI </td>
-						<td> 7, 5, 2½ ys, 3 acquittals </td>
+						<td> 7, 5, 2&frac12; ys, 3 acquittals </td>
 					</tr>
 					<tr>
 						<td> <b>6</b> </td>
 						<td> Karl Krauch <i>et al.</i> (I.G. Farben Case, slave labor, DEGESCH, Zyklon B) </td>
 						<td> 3/5/1947 &mdash; 30/7/1948 </td>
 						<td> VII &amp; VIII </td>
-						<td> 2&times;8, 7, 2&times;6, 5, 4, 3, 3&times;2, 2&times;1½ ys </td>
+						<td> 2&times;8, 7, 2&times;6, 5, 4, 3, 3&times;2, 2&times;1&frac12; ys </td>
 					</tr>
 					<tr>
 						<td> 7 </td>
