--- a/o/open-air-incinerations/index.html
+++ b/o/open-air-incinerations/index.html
@@ -82,7 +82,7 @@
 				<a id="Technologies"></a>Technologies
 			</h4>
 			<p>
-				The biggest challenge when trying to combust a body is to raise its temperature to a point where its combustible components can ignite. The biggest impediment for this is the natural water content, which is about ⅔ of the mass of a human body. Most of this water has to evaporate first before tissue temperature can be raised to a point where it will combust.
+				The biggest challenge when trying to combust a body is to raise its temperature to a point where its combustible components can ignite. The biggest impediment for this is the natural water content, which is about &frac23; of the mass of a human body. Most of this water has to evaporate first before tissue temperature can be raised to a point where it will combust.
 			</p>
 			<p>
 				The biggest enemy of open-air incineration is heat loss of any fire due to convection and radiation. This can be counteracted by surrounding the fire with insulated, heat-reflecting floors, walls and a ceiling, and ideally by extracting the heat contained in the smoke gases and using it to heat up air/oxygen fed into the fire for combustion. This is ultimately what properly designed cremation furnaces do. However, there are multiple stages to reach this technological endpoint. Energetically speaking, the worst open-air incineration is one that is conducted on a plain flat surface. The more a fire is surrounded by walls, the more its heat gets preserved. Hence, an efficient pyre is located in a pit or trench rather than on the flat soil. The closer the walls are together, the better. Therefore, a narrow and long, rectangular trench is better than a square-shaped one of the same surface area.
@@ -366,7 +366,7 @@
 						<td> 15.5 m </td>
 					</tr>
 					<tr>
-						<td> <a href="/r/rosin-arnost/index.html">Arno&scaron;t Rosin</a>‡ </td>
+						<td> <a href="/r/rosin-arnost/index.html">Arno&scaron;t Rosin</a>&Dagger; </td>
 						<td> &mdash; </td>
 						<td> 30 m </td>
 						<td> 15 m </td>
@@ -404,7 +404,7 @@
 				</tbody>
 				<tfoot>
 				<tr>
-					<td colspan="10">Source: <a href="/bibliography/index.html#Mattogno2016b">Mattogno 2016b</a>, p. 28. * Fresh wood required, at 250 kg per body. &dagger; Stacking height just for the fresh wood, at 0.9 kg/m&sup3;, and a packing density of 1.4., calculated for the largest pit area indicated. ‡ Together with <a href="/m/mordowicz-czeslaw/index.html">Czes&#322;aw Mordowicz</a>.</td>
+					<td colspan="10">Source: <a href="/bibliography/index.html#Mattogno2016b">Mattogno 2016b</a>, p. 28. * Fresh wood required, at 250 kg per body. &dagger; Stacking height just for the fresh wood, at 0.9 kg/m&sup3;, and a packing density of 1.4., calculated for the largest pit area indicated. &Dagger; Together with <a href="/m/mordowicz-czeslaw/index.html">Czes&#322;aw Mordowicz</a>.</td>
 				</tr>
 				</tfoot>
 			</table>
