--- a/s/sachsenhausen/index.html
+++ b/s/sachsenhausen/index.html
@@ -79,7 +79,7 @@
 			<figure>
 				<img class="img-thumbnail" src="/_assets/SachsenhausenDelousing.png" alt="Sachsenhausen Camp, fumigation chamber, schematic drawing" height="1783" width="2468" />
 				<figcaption>
-					Schematic drawing of the technical equipment once contained in the delousing chamber at the Sachsenhausen Camp, following the drawing contained in the Soviet expert report. Compare this with the DEGESCH circulation system (entry on fumigation gas chamber; © Carlo Mattogno.)<br />
+					Schematic drawing of the technical equipment once contained in the delousing chamber at the Sachsenhausen Camp, following the drawing contained in the Soviet expert report. Compare this with the DEGESCH circulation system (entry on fumigation gas chamber; &copy; Carlo Mattogno.)<br />
 					1: Box to hold the Zyklon B can. 2: Lever to puncture the can. 3: Lid. 4: Funnel. 5: Box to catch falling Zyklon-B pellets. 6: Feeder pipe from can opener to fan. 7: Circulation fan. 8: Circulation exit pipe. 9: Exhaust fan. 10-12: Circulation entry pipe.
 				</figcaption>
 			</figure>
