--- a/s/sonderkommando/index.html
+++ b/s/sonderkommando/index.html
@@ -107,7 +107,7 @@
 				<li>Moszek Cy(Zi)zner</li>
 				<li><a href="/d/dragon-abraham/index.html">Abraham Dragon</a></li>
 				<li><a href="/d/dragon-szlama/index.html">Szlama Dragon</a></li>
-				<li>Yishayahu Isaïe Ehrlich</li>
+				<li>Yishayahu Isa&iuml;e Ehrlich</li>
 				<li><a href="/e/eisenschmidt-eliezer/index.html">Eliezer Eisenschmidt</a></li>
 				<li>Louis Welfke Fink(el)</li>
 				<li>Moshe Fry(ie)dman(n)</li>
@@ -161,7 +161,7 @@
 				<li><a href="/o/olere-david/index.html">David Ol&egrave;re</a></li>
 				<li><a href="/p/paisikovic-dov/index.html">Dov Paisikovic</a></li>
 				<li><a href="/p/pilo-aaron/index.html">Aaron Pilo</a></li>
-				<li>Lemke/Chaïm Pliszko</li>
+				<li>Lemke/Cha&iuml;m Pliszko</li>
 				<li>Otto Pressburger</li>
 				<li><a href="/r/rosenblum-joshuah/index.html">Joshuah Rosenblum</a></li>
 				<li>Felix Rosenthal</li>
