--- a/e/exaggerated-death-tolls/index.html
+++ b/e/exaggerated-death-tolls/index.html
@@ -94,7 +94,7 @@
 						<td> 1.3 million </td>
 						<td> 150,000 </td>
 						<td> 9 </td>
-						<td> &lt;1,000‡ </td>
+						<td> &lt;1,000&Dagger; </td>
 						<td> 1,300 </td>
 					</tr>
 					<tr>
@@ -135,7 +135,7 @@
 						<td> 200,000 </td>
 						<td> 10 </td>
 						<td> 80,000+&dagger; </td>
-						<td> ±25 </td>
+						<td> &plusmn;25 </td>
 					</tr>
 					<tr>
 						<td> <a href="/t/treblinka/index.html">Treblinka</a> </td>
@@ -150,7 +150,7 @@
 				<tr>
 					<td colspan="6">
 					<p>
-						* based on disturbed soil volume found; &dagger; enough disturbed soil volume was found to accommodate the claimed 80,000 buried victims, but more are said to have been killed later without being buried; however, tracelessly burning those bodies would have been nearly impossible with the means and the time at the camp&rsquo;s disposal; the latter is also true for Belzec and Treblinka; ‡ based on number of trees felled in the camp&rsquo;s vicinity. If taking this as a measure, the numbers for Belzec, Sobib&oacute;r and Treblinka would be quite similar to Che&#322;mno&rsquo;s numbers. </td>
+						* based on disturbed soil volume found; &dagger; enough disturbed soil volume was found to accommodate the claimed 80,000 buried victims, but more are said to have been killed later without being buried; however, tracelessly burning those bodies would have been nearly impossible with the means and the time at the camp&rsquo;s disposal; the latter is also true for Belzec and Treblinka; &Dagger; based on number of trees felled in the camp&rsquo;s vicinity. If taking this as a measure, the numbers for Belzec, Sobib&oacute;r and Treblinka would be quite similar to Che&#322;mno&rsquo;s numbers. </td>
 				</tr>
 				</tfoot>
 			</table>
