--- a/l/lumberjacks/index.html
+++ b/l/lumberjacks/index.html
@@ -102,12 +102,12 @@
 					</tr>
 					<tr>
 						<td><a href="/a/adametz-gerhard/index.html">Gerhard Adametz</a>/<a href="/r/rumbula/index.html">Riga</a></td>
-						<td> ≥32,000 </td>
-						<td> ≥8,000 </td>
-						<td> ≥18 </td>
-						<td> ≥40 </td>
+						<td> &ge;32,000 </td>
+						<td> &ge;8,000 </td>
+						<td> &ge;18 </td>
+						<td> &ge;40 </td>
 						<td> 135 </td>
-						<td> ≥94 </td>
+						<td> &ge;94 </td>
 					</tr>
 					<tr>
 						<td><a href="/a/amiel-szymon/index.html">Szymon Amiel</a>/<a href="/b/bialystok/index.html">Bia&#322;ystok</a></td>
@@ -273,7 +273,7 @@
 					</tr>
 					<tr>
 						<td><a href="/s/steyuk-yakov/index.html">Yakov Steyuk</a>/<a href="/b/babi-yar/index.html">Babi Yar</a></td>
-						<td> 50,000‡ </td>
+						<td> 50,000&Dagger; </td>
 						<td> 12,500 </td>
 						<td> 28 </td>
 						<td> 62 </td>
@@ -339,7 +339,7 @@
 					</tr>
 					<tr>
 						<td><a href="/m/majdanek/index.html">Majdanek</a> (<a href="/o/operation-harvest-festival/index.html">Harvest Festival</a>)</td>
-						<td> ≥17,000 </td>
+						<td> &ge;17,000 </td>
 						<td> 4,250 </td>
 						<td> 9 </td>
 						<td> 21 </td>
@@ -348,7 +348,7 @@
 					</tr>
 					<tr>
 						<td><a href="/s/sobibor/index.html">Sobib&oacute;r</a></td>
-						<td> ≥170,000 </td>
+						<td> &ge;170,000 </td>
 						<td> 42,500 </td>
 						<td> 94 </td>
 						<td> 212 </td>
@@ -357,7 +357,7 @@
 					</tr>
 					<tr>
 						<td><a href="/t/treblinka/index.html">Treblinka</a></td>
-						<td> ≥700,000 </td>
+						<td> &ge;700,000 </td>
 						<td> 175,000 </td>
 						<td> 389 </td>
 						<td> 872 </td>
@@ -369,7 +369,7 @@
 				<tr>
 					<td colspan="7">* On average, a 50-year-old spruce forest yields some 450 metric tons of wood per hectare (100 m &times; 100 m) or 201 tons per American-Football field (<a href="/bibliography/index.html#Colombo">Colombo</a>, p. 161). Fell all trees of such a forest of this size to obtain the required amount of wood.<br />
 					&dagger; Number required for the time span claimed, which varies from case to case. <a href="/b/blyazer-a/index.html">Blyazer</a> gave the number of lumberjacks in his team (15), who would have finished their work sometime in 1948.<br />
-					‡ In a later interview, <a href="/s/steyuk-yakov/index.html">Steyuk</a> doubled the number of bodies burned. See the values listed for <a href="/a/adametz-gerhard/index.html">Adametz</a>, <a href="/d/doliner-iosif/index.html">Doliner</a>, <a href="/k/kuklia-vladislav/index.html">Kuklia</a>.</td>
+					&Dagger; In a later interview, <a href="/s/steyuk-yakov/index.html">Steyuk</a> doubled the number of bodies burned. See the values listed for <a href="/a/adametz-gerhard/index.html">Adametz</a>, <a href="/d/doliner-iosif/index.html">Doliner</a>, <a href="/k/kuklia-vladislav/index.html">Kuklia</a>.</td>
 				</tr>
 				</tfoot>
 			</table>
