convert webp and gif images

--- a/d/doessekker-bruno/index.html
+++ b/d/doessekker-bruno/index.html
@@ -22,7 +22,7 @@
 			<audio controls src="/_assets/audio/DoessekkerBruno.mp3">
 			</audio>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/DoessekkerBruno.webp" alt="Bruno Doessekker" height="620" width="856" />
+				<img class="img-thumbnail" src="/_assets/img/DoessekkerBruno.jpg" alt="Bruno Doessekker" height="620" width="856" />
 				<figcaption>
 					Bruno Doessekker
 				</figcaption>
