--- a/g/grossman-vasily/index.html
+++ b/g/grossman-vasily/index.html
@@ -22,7 +22,7 @@
 			<audio controls src="/_assets/audio/GrossmanVasily.mp3">
 			</audio>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/GrossmanVasily.webp" alt="Vasily Grossman" height="2312" width="1825" />
+				<img class="img-thumbnail" src="/_assets/img/GrossmanVasily.jpg" alt="Vasily Grossman" height="2312" width="1825" />
 				<figcaption>
 					Vasily Grossman
 				</figcaption>
