--- a/w/wael-monique-de/index.html
+++ b/w/wael-monique-de/index.html
@@ -22,7 +22,7 @@
 			<audio controls src="/_assets/audio/WaelMoniqueDe.mp3">
 			</audio>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/WaelMoniqueDe.webp" alt="Monique de Wael" height="385" width="525" />
+				<img class="img-thumbnail" src="/_assets/img/WaelMoniqueDe.jpg" alt="Monique de Wael" height="385" width="525" />
 				<figcaption>
 					Monique de Wael
 				</figcaption>
