--- a/z/zyklon-b/index.html
+++ b/z/zyklon-b/index.html
@@ -56,7 +56,7 @@
 				Evaporation Characteristics
 			</h4>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/ZyklonBEvaporation.gif" alt="Zyklon-B evaporation chart" height="892" width="1000" />
+				<img class="img-thumbnail" src="/_assets/img/ZyklonBEvaporation.jpg" alt="Zyklon-B evaporation chart" height="892" width="1000" />
 				<figcaption>
 					Evaporation rate of hydrogen cyanide from the Erco carrier material (gypsum with some starch) at various temperatures, low relative humidity and fine distribution.
 				</figcaption>
